--- a/AgendaLibrary/Resources/Localization/AgendaLibrary.en.resx
+++ b/AgendaLibrary/Resources/Localization/AgendaLibrary.en.resx
@@ -118,120 +118,162 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="agenda" xml:space="preserve">
-    <value>dặn dò</value>
+    <value>agendas</value>
   </data>
   <data name="agenda_available" xml:space="preserve">
-    <value>Dặn dò để làm</value>
+    <value>Agendas available</value>
   </data>
   <data name="agenda_database" xml:space="preserve">
-    <value>Số dặn dò trên cơ sở dữ liệu</value>
+    <value>Agendas on database</value>
+  </data>
+  <data name="agenda_prune" xml:space="preserve">
+    <value>Agendas to be pruned</value>
   </data>
   <data name="bug_report_role" xml:space="preserve">
-    <value>Báo cáo lỗi trong chương trình</value>
+    <value>Report a bug</value>
   </data>
   <data name="command_entered" xml:space="preserve">
-    <value>Lệnh bạn gõ vào</value>
+    <value>Command you entered</value>
   </data>
   <data name="content" xml:space="preserve">
-    <value>Nội dung</value>
+    <value>Content</value>
   </data>
   <data name="create_log" xml:space="preserve">
-    <value>Tạo tệp theo dõi.....</value>
+    <value>Creating log file.....</value>
   </data>
   <data name="create_log_finish" xml:space="preserve">
-    <value>Tệp theo dõi đã tạo.</value>
+    <value>Logging file created.</value>
   </data>
   <data name="credits_role" xml:space="preserve">
-    <value>Xem danh sách người tham gia trong hoạt động làm chương trình</value>
+    <value>View credits</value>
   </data>
   <data name="current_date_time" xml:space="preserve">
-    <value>Ngày và thời gian hiện tại</value>
+    <value>Current date and time</value>
   </data>
   <data name="deadline" xml:space="preserve">
-    <value>Hạn chót</value>
+    <value>Deadline</value>
   </data>
   <data name="debug_warning" xml:space="preserve">
-    <value>ĐÂY LÀ BẢN DEBUG, HIỆN NĂNG SẺ GIẢM, SỬ DỤNG VỚI SỰ CẨN THẬN.</value>
+    <value>THIS IS A DEBUG BUILD, PERFORMANCE WILL BE REDUCED, USE WITH CAUTION.</value>
+  </data>
+  <data name="early_date_error" xml:space="preserve">
+    <value>Date cannot be earlier than or equal to today.</value>
+  </data>
+  <data name="empty_content_error" xml:space="preserve">
+    <value>Content cannot be empty.</value>
+  </data>
+  <data name="empty_date_error" xml:space="preserve">
+    <value>Date cannot be empty.</value>
   </data>
   <data name="empty_role_warning" xml:space="preserve">
-    <value>Lựa chọn thao tác không thể trống.</value>
+    <value>Role input cannot be empty.</value>
+  </data>
+  <data name="empty_subject_error" xml:space="preserve">
+    <value>Subject cannot be empty.</value>
   </data>
   <data name="establish_connection" xml:space="preserve">
-    <value>Kết nối đến cơ sở dữ liệu.....</value>
+    <value>Establishing connection to database.....</value>
   </data>
   <data name="establish_connection_finish" xml:space="preserve">
-    <value>Đã kết nối đến cơ sở dữ liệu.</value>
+    <value>Connection to database established.</value>
   </data>
   <data name="exit_role" xml:space="preserve">
-    <value>Thoát (thoát chương trình)</value>
+    <value>Exiting (exit the program)</value>
   </data>
   <data name="fetch_database" xml:space="preserve">
-    <value>Lấy các dặn dò từ cơ sở dữ liệu.....</value>
+    <value>Fetching agenda database.....</value>
   </data>
   <data name="help_role" xml:space="preserve">
-    <value>Mở Trợ giúp (chưa hoàn thành)</value>
+    <value>Summon Help (not finished yet)</value>
+  </data>
+  <data name="invalid_date_error" xml:space="preserve">
+    <value>Date entered does not translate to a valid day.</value>
+  </data>
+  <data name="invalid_role_error" xml:space="preserve">
+    <value>Invalid role specified.</value>
   </data>
   <data name="library" xml:space="preserve">
-    <value>thư viện bản</value>
+    <value>library</value>
+  </data>
+  <data name="main_dev" xml:space="preserve">
+    <value>Main developer</value>
   </data>
   <data name="notes" xml:space="preserve">
-    <value>Ghi chú</value>
+    <value>Notes</value>
+  </data>
+  <data name="pruned" xml:space="preserve">
+    <value>Pruned</value>
   </data>
   <data name="pruner_role" xml:space="preserve">
-    <value>Tỉa (Xóa bỏ các dặn dò lỗi thời trong cơ sở dữ liệu)</value>
+    <value>Pruner (pruning old out-of-date agendas from database)</value>
+  </data>
+  <data name="pruning" xml:space="preserve">
+    <value>Pruning</value>
   </data>
   <data name="receiver_role" xml:space="preserve">
-    <value>Nhận (nhận các dặn dò từ cơ sở dữ liệu)</value>
+    <value>Receiver (receiving upcoming agendas from database)</value>
   </data>
   <data name="role_selection" xml:space="preserve">
-    <value>Các lựa chọn thao tác</value>
+    <value>Role selection</value>
   </data>
   <data name="secret_shell_access" xml:space="preserve">
-    <value>Bạn đã truy cập vào menu bí mật!</value>
+    <value>You have accessed the secret menu!</value>
   </data>
   <data name="secret_shell_note" xml:space="preserve">
-    <value>Đây chỉ là môi trường mã lệnh thử nghiệm, gõ lệnh "exit" để thoát</value>
+    <value>This is just a shell in testing, type 'exit' to exit the shell.</value>
   </data>
   <data name="setting_role" xml:space="preserve">
-    <value>Chỉnh sửa cài đặt (chưa hoàn thành)</value>
+    <value>Change settings (not finished yet)</value>
   </data>
   <data name="setup_json" xml:space="preserve">
-    <value>Đang tạo trình viết JSON.....</value>
+    <value>Setting up JSON writer.....</value>
   </data>
   <data name="setup_json_finish" xml:space="preserve">
-    <value>Trình viết JSON đã tạo.</value>
+    <value>JSON writer set up.</value>
   </data>
   <data name="specify_password" xml:space="preserve">
-    <value>Gõ mật mã</value>
+    <value>Specify your password</value>
   </data>
   <data name="specify_role" xml:space="preserve">
-    <value>Chọn thao tác bạn muốn làm tương ứng với các số trên</value>
+    <value>Specify your role in the designated number above</value>
   </data>
   <data name="started_up" xml:space="preserve">
-    <value>bật lên trong</value>
+    <value>started up in</value>
   </data>
   <data name="subject" xml:space="preserve">
-    <value>Môn học</value>
+    <value>Subject</value>
+  </data>
+  <data name="testers" xml:space="preserve">
+    <value>Testers</value>
   </data>
   <data name="updater_thread" xml:space="preserve">
-    <value>Tạo luồng để tải trình cập nhật.....</value>
+    <value>Setting up thread for updater download.....</value>
   </data>
   <data name="updater_thread_finish" xml:space="preserve">
-    <value>Luồng tải trình cập nhật đã tạo.</value>
+    <value>Updater thread set up.</value>
   </data>
   <data name="update_role" xml:space="preserve">
-    <value>Kiểm tra cập nhật</value>
+    <value>Check for updates</value>
   </data>
   <data name="uploader_role" xml:space="preserve">
-    <value>Tải lên (tải lên các dặn dò lên cơ sở dữ liệu)</value>
+    <value>Uploader (uploading agendas to database)</value>
+  </data>
+  <data name="upload_agenda" xml:space="preserve">
+    <value>Uploading agenda to database.....</value>
+  </data>
+  <data name="upload_agenda_finish" xml:space="preserve">
+    <value>Uploaded agenda to database.</value>
   </data>
   <data name="wait_to_start" xml:space="preserve">
-    <value>Chờ 3 giây để bật lên.....</value>
+    <value>Waiting 3 seconds until starting up.....</value>
   </data>
   <data name="welcome" xml:space="preserve">
-    <value>Chào mừng đến với Agenda Manager bản</value>
+    <value>Welcome to Agenda Manager</value>
+  </data>
+  <data name="work_in_progress" xml:space="preserve">
+    <value>This function is still work-in-progress.</value>
   </data>
   <data name="wrong_password" xml:space="preserve">
-    <value>Mật mã sai.</value>
+    <value>Wrong password entered.</value>
   </data>
 </root>
