--- a/AgendaManager2/Properties/Resources.resx
+++ b/AgendaManager2/Properties/Resources.resx
@@ -117,43 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="exit_collection_retrival_failure" xml:space="preserve">
-    <value>Cannot retrive a collection on database, this is a server side issue</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="cogwheel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cogwheel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="exit_database_connection_failure" xml:space="preserve">
-    <value>Cannot connect to database, check your internet connection</value>
+  <data name="downloads" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\downloads.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="exit_database_upload_failure" xml:space="preserve">
-    <value />
+  <data name="pruning_shears" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pruning-shears.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="exit_download_updater_failure" xml:space="preserve">
-    <value />
-  </data>
-  <data name="exit_download_update_failure" xml:space="preserve">
-    <value />
-  </data>
-  <data name="exit_fetch_update_failure" xml:space="preserve">
-    <value />
-  </data>
-  <data name="exit_install_update_failure" xml:space="preserve">
-    <value />
-  </data>
-  <data name="exit_invalid_input" xml:space="preserve">
-    <value />
-  </data>
-  <data name="exit_invalid_role" xml:space="preserve">
-    <value />
-  </data>
-  <data name="exit_secret_menu_accessed" xml:space="preserve">
-    <value />
-  </data>
-  <data name="exit_successful_execution" xml:space="preserve">
-    <value>No problem during execution.</value>
-  </data>
-  <data name="exit_unknown" xml:space="preserve">
-    <value />
-  </data>
-  <data name="exit_wrong_password" xml:space="preserve">
-    <value />
+  <data name="upload" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\upload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
